Fixed context menu on MacOS and auto-startup