@@ -11,12 +11,20 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 /**
  * Manages application startup settings for different operating systems.
  */
 @Slf4j
 public class StartupManager {
+
+    // The identifiers used to register the app for startup - must match the values used
+    // when packaging the app with jpackage (see the mac/windows profiles in pom.xml)
+    private static final String WINDOWS_APP_NAME = "pivotalstockticker";
+    private static final String MAC_BUNDLE_ID = "com.pivotal.stockticker";
 
     // Determine the operating system
     private static final String OS = System.getProperty("os.name").toLowerCase();
@@ -67,23 +75,24 @@ public class StartupManager {
      * @return true if startup is enabled, false otherwise.
      */
     public static boolean isStartupEnabled() {
-        String os = System.getProperty("os.name").toLowerCase();
+        if (isWindows()) {
 
-        if (os.contains("win")) {
             // Check Windows registry
             try {
-                Process process = Runtime.getRuntime().exec(
-                    "reg query HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run /v YourStockTicker"
-                );
-                return process.waitFor() == 0;
-            } catch (Exception e) {
+                Process process = Runtime.getRuntime().exec(new String[]{
+                        "reg", "query", "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run", "/v", WINDOWS_APP_NAME
+                });
+                return process.waitFor(5, TimeUnit.SECONDS) && process.exitValue() == 0;
+            }
+            catch (Exception e) {
+                log.warn("Cannot query Windows startup registry entry", e);
                 return false;
             }
-        } else if (os.contains("mac")) {
+        }
+        else if (isMac()) {
+
             // Check for plist file
-            String homeDir = System.getProperty("user.home");
-            String plistPath = homeDir + "/Library/LaunchAgents/com.yourcompany.stockticker.plist";
-            return Files.exists(Paths.get(plistPath));
+            return Files.exists(Paths.get(getMacPlistPath()));
         }
 
         return false;
@@ -94,16 +103,23 @@ public class StartupManager {
      */
     private static void enableWindowsStartup() {
         try {
-            String appPath = new File(".").getCanonicalPath() + "\\YourApp.exe";
-            String appName = "YourStockTicker";
+            List<String> launchCommand = getLaunchCommand();
+            if (launchCommand.isEmpty()) {
+                log.error("Cannot enable Windows startup: unable to determine the application launch command");
+                return;
+            }
 
-            // Add to registry
-            String command = String.format(
-                    "reg add HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run /v \"%s\" /d \"%s\" /f",
-                    appName, appPath
-            );
+            // Registry values can only hold a single command string. Quote each argument so
+            // paths containing spaces (e.g. "Program Files") are preserved correctly.
+            String appPath = String.join(" ", launchCommand.stream().map(arg -> "\"" + arg + "\"").toArray(String[]::new));
 
-            Runtime.getRuntime().exec(command);
+            Process process = Runtime.getRuntime().exec(new String[]{
+                    "reg", "add", "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run",
+                    "/v", WINDOWS_APP_NAME, "/d", appPath, "/f"
+            });
+            if (!process.waitFor(5, TimeUnit.SECONDS) || process.exitValue() != 0) {
+                log.error("Cannot enable Windows startup: 'reg add' exited with a non-zero status");
+            }
         }
         catch (Exception e) {
             log.error("Cannot enable Windows startup", e);
@@ -115,13 +131,12 @@ public class StartupManager {
      */
     private static void disableWindowsStartup() {
         try {
-            String appName = "YourStockTicker";
-            String command = String.format(
-                    "reg delete HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run /v \"%s\" /f",
-                    appName
-            );
-
-            Runtime.getRuntime().exec(command);
+            Process process = Runtime.getRuntime().exec(new String[]{
+                    "reg", "delete", "HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Run", "/v", WINDOWS_APP_NAME, "/f"
+            });
+            if (!process.waitFor(5, TimeUnit.SECONDS) || process.exitValue() != 0) {
+                log.error("Cannot disable Windows startup: 'reg delete' exited with a non-zero status");
+            }
         }
         catch (Exception e) {
             log.error("Cannot disable Windows startup", e);
@@ -133,34 +148,48 @@ public class StartupManager {
      */
     private static void enableMacStartup() {
         try {
-            String homeDir = System.getProperty("user.home");
-            String plistPath = homeDir + "/Library/LaunchAgents/com.yourcompany.stockticker.plist";
+            List<String> launchCommand = getLaunchCommand();
+            if (launchCommand.isEmpty()) {
+                log.error("Cannot enable Mac startup: unable to determine the application launch command");
+                return;
+            }
+
+            String plistPath = getMacPlistPath();
+
+            StringBuilder programArguments = new StringBuilder();
+            for (String arg : launchCommand) {
+                programArguments.append("        <string>").append(escapeXml(arg)).append("</string>\n");
+            }
 
             String plistContent = """
                     <?xml version="1.0" encoding="UTF-8"?>
-                    <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" 
+                    <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN"
                         "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
                     <plist version="1.0">
                     <dict>
                         <key>Label</key>
-                        <string>com.yourcompany.stockticker</string>
+                        <string>%s</string>
                         <key>ProgramArguments</key>
                         <array>
-                            <string>%s</string>
-                        </array>
+                    %s        </array>
                         <key>RunAtLoad</key>
                         <true/>
                         <key>KeepAlive</key>
                         <false/>
                     </dict>
                     </plist>
-                    """.formatted(getApplicationPath());
+                    """.formatted(MAC_BUNDLE_ID, programArguments);
 
-            // Write plist file
+            // Make sure the LaunchAgents directory exists, then write the plist file
+            Files.createDirectories(Paths.get(plistPath).getParent());
             Files.write(Paths.get(plistPath), plistContent.getBytes());
 
-            // Load the launch agent
-            Runtime.getRuntime().exec(new String[]{"launchctl", "load", plistPath});
+            // Unload first in case a stale agent is already loaded, then load the new one
+            runAndWait(new String[]{"launchctl", "unload", plistPath});
+            Process process = Runtime.getRuntime().exec(new String[]{"launchctl", "load", plistPath});
+            if (!process.waitFor(5, TimeUnit.SECONDS) || process.exitValue() != 0) {
+                log.error("Cannot enable Mac startup: 'launchctl load' exited with a non-zero status");
+            }
         }
         catch (Exception e) {
             log.error("Cannot enable Mac startup", e);
@@ -172,40 +201,93 @@ public class StartupManager {
      */
     private static void disableMacStartup() {
         try {
-            String homeDir = System.getProperty("user.home");
-            String plistPath = homeDir + "/Library/LaunchAgents/com.yourcompany.stockticker.plist";
-
-            // Unload and remove
-            Runtime.getRuntime().exec(new String[]{"launchctl", "unload", plistPath});
-            Files.deleteIfExists(Paths.get(plistPath));
+            String plistPath = getMacPlistPath();
+            if (Files.exists(Paths.get(plistPath))) {
+                runAndWait(new String[]{"launchctl", "unload", plistPath});
+                Files.deleteIfExists(Paths.get(plistPath));
+            }
         }
         catch (Exception e) {
-            log.error("Cannot disable mac startup", e);
+            log.error("Cannot disable Mac startup", e);
         }
     }
 
     /**
-     * Gets the application path for the startup script.
+     * Runs a command and waits for it to complete, logging a warning if it fails.
+     * Used for commands where failure is non-fatal (e.g. unloading an agent that may not be loaded).
      *
-     * @return The application path.
+     * @param command The command and its arguments.
      */
-    private static String getApplicationPath() {
+    private static void runAndWait(String[] command) {
         try {
-            // For JAR files
-            String path = StartupManager.class.getProtectionDomain()
-                    .getCodeSource().getLocation().toURI().getPath();
-
-            // If running from IDE, you might want to return the wrapper script
-            if (path.endsWith(".jar")) {
-                return "java -jar " + path;
-            }
-
-            // For packaged applications (.exe, .app)
-            return new File(".").getCanonicalPath() + File.separator + "YourApp";
+            Process process = Runtime.getRuntime().exec(command);
+            process.waitFor(5, TimeUnit.SECONDS);
         }
         catch (Exception e) {
-            log.error("Cannot get application path", e);
-            return "";
+            log.warn("Command failed: {}", String.join(" ", command), e);
         }
+    }
+
+    /**
+     * Gets the path to the Mac Launch Agent plist file.
+     *
+     * @return The plist file path.
+     */
+    private static String getMacPlistPath() {
+        String homeDir = System.getProperty("user.home");
+        return homeDir + "/Library/LaunchAgents/" + MAC_BUNDLE_ID + ".plist";
+    }
+
+    /**
+     * Escapes reserved XML characters so a value can be safely embedded in a plist string.
+     *
+     * @param value The value to escape.
+     * @return The escaped value.
+     */
+    private static String escapeXml(String value) {
+        return value.replace("&", "&amp;")
+                .replace("<", "&lt;")
+                .replace(">", "&gt;");
+    }
+
+    /**
+     * Determines the command used to launch this application, as a list of arguments.
+     * <p>
+     * When running as a jpackage-installed application (Windows .exe or Mac .app), the
+     * {@code jpackage.app-path} system property is set by the native launcher to the real
+     * installed executable, so that is used directly.
+     * <p>
+     * Otherwise (e.g. running from an IDE or a plain jar during development), falls back to
+     * re-invoking the current JVM against the running jar file.
+     *
+     * @return The launch command as a list of arguments, or an empty list if it could not be determined.
+     */
+    private static List<String> getLaunchCommand() {
+        List<String> command = new ArrayList<>();
+        try {
+            String appPath = System.getProperty("jpackage.app-path");
+            if (appPath != null && !appPath.isBlank()) {
+                command.add(appPath);
+                return command;
+            }
+
+            // Not running as a packaged app - fall back to "java -jar <path-to-jar>"
+            String jarPath = StartupManager.class.getProtectionDomain()
+                    .getCodeSource().getLocation().toURI().getPath();
+            if (jarPath.endsWith(".jar")) {
+                String javaBin = System.getProperty("java.home") + File.separator + "bin" + File.separator +
+                        (isWindows() ? "java.exe" : "java");
+                command.add(javaBin);
+                command.add("-jar");
+                command.add(jarPath);
+                return command;
+            }
+
+            log.warn("Cannot determine launch command: not a packaged app and not running from a jar (path={})", jarPath);
+        }
+        catch (Exception e) {
+            log.error("Cannot determine application launch command", e);
+        }
+        return command;
     }
 }
